# bqq

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  init.sh  setup.cfg  setup.py  x.py
bqq/: __init__.py  auth.py  bq_client.py  bq_util.py  config.py  const.py  csv.py  data.py  db.py  default-skin.yaml  info.py  infos.py  output.py  result.py  results.py  types.py  util.py
bqq/data/: results.py
bqq/service/: bq_service.py  info_service.py  project_service.py  result_service.py
bqq/util/: bash_util.py  bq_util.py
docs/: Release.md
