[metadata]
name = bqq
version = 0.1.2
author = Martin Tupy
author_email = id@martintupy.com
description = BigQuery query

[options]
packages = find:
python_requires = >= 3.5
install_requires =
    google-cloud-bigquery
    Click
    prettytable
    tinydb

[options.entry_points]
console_scripts = bqq = bqq:cli